ui: fix line in list view not showing under text

--- a/styles/List.module.scss
+++ b/styles/List.module.scss
@@ -168,7 +168,6 @@
     }
     span {
       position: relative;
-      isolation: isolate;
     }
     .line {
       display: block !important;
